// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VerticalIndicators displays tooltips 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 22px; top: 33px;"
>
  <div>
    <span
      class="timelineVerticalIndicatorsSwatch"
      style="background-color: var(--red-60);"
    />
     
    Load
    <span
      class="timelineVerticalIndicatorsDim"
    >
       at 
    </span>
    <span
      class="timelineVerticalIndicatorsTime"
    >
      0.003s
    </span>
     
  </div>
  <div
    class="timelineVerticalIndicatorsUrl"
  >
    https://developer.mozilla.org/en-US/
  </div>
</div>
`;

exports[`timeline/TrackNetwork draws differently a request and displays a tooltip when hovered 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 23px; top: 13px;"
>
  <div
    class="tooltipMarker tooltipNetwork"
  >
    <div
      class="tooltipHeader"
    >
      <div
        class="tooltipOneLine"
      >
        <div
          class="tooltipTiming"
        >
          1ms
        </div>
        <div
          class="tooltipTitle"
        >
          <span
            class="tooltipTitleText"
          >
            Load 0: https://mozilla.org
          </span>
        </div>
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Status
        :
      </div>
      Response received
      <div
        class="tooltipLabel"
      >
        URL
        :
      </div>
      <span
        class="tooltipDetailsUrl"
      >
        https://mozilla.org
      </span>
      <div
        class="tooltipLabel"
      >
        Priority
        :
      </div>
      Normal(0)
      <div
        class="tooltipLabel"
      >
        MIME type
        :
      </div>
      <div
        class="tooltipNetworkMimeType"
      >
        <span
          class="tooltipNetworkMimeTypeSwatch colored-square network-color-html"
          title="text/html"
        />
        text/html
      </div>
      <div
        class="tooltipLabel"
      >
        Track
        :
      </div>
      Empty
    </div>
    <div
      class="tooltipNetworkPhases network-color-html"
    >
      <div
        class="tooltipLabel"
      >
        HTTP response
        :
      </div>
      <div
        aria-label="Starting at 0 milliseconds, duration is 1.0 milliseconds"
      >
        1.0ms
      </div>
      <div
        aria-hidden="true"
        class="tooltipNetworkPhase"
        style="margin-left: 0%; margin-right: 0%; opacity: 1;"
      />
    </div>
  </div>
</div>
`;

exports[`timeline/TrackNetwork draws differently a request and displays a tooltip when hovered 2`] = `
Array [
  Array [
    "clearRect",
    0,
    0,
    400,
    35,
  ],
  Array [
    "set strokeStyle",
    "rgba(0, 127, 255, 0.3)",
  ],
  Array [
    "set lineCap",
    "round",
  ],
  Array [
    "set lineWidth",
    3.75,
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    6.666666666666673,
    7.5,
  ],
  Array [
    "lineTo",
    73.33333333333331,
    7.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    13.333333333333346,
    12.5,
  ],
  Array [
    "lineTo",
    80.00000000000001,
    12.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    19.99999999999999,
    17.5,
  ],
  Array [
    "lineTo",
    86.66666666666666,
    17.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    26.666666666666664,
    22.5,
  ],
  Array [
    "lineTo",
    93.33333333333336,
    22.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    33.333333333333336,
    27.5,
  ],
  Array [
    "lineTo",
    100,
    27.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    40.00000000000001,
    32.5,
  ],
  Array [
    "lineTo",
    106.66666666666666,
    32.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    46.66666666666668,
    2.5,
  ],
  Array [
    "lineTo",
    113.33333333333336,
    2.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    53.33333333333333,
    7.5,
  ],
  Array [
    "lineTo",
    120,
    7.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    60,
    12.5,
  ],
  Array [
    "lineTo",
    126.6666666666667,
    12.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "set strokeStyle",
    "#0069aa",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    2.5,
  ],
  Array [
    "lineTo",
    66.66666666666667,
    2.5,
  ],
  Array [
    "stroke",
  ],
]
`;

exports[`timeline/TrackNetwork matches the 2d context snapshot 1`] = `
Array [
  Array [
    "clearRect",
    0,
    0,
    0,
    35,
  ],
  Array [
    "set strokeStyle",
    "rgba(0, 127, 255, 0.3)",
  ],
  Array [
    "set lineCap",
    "round",
  ],
  Array [
    "set lineWidth",
    3.75,
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    2.5,
  ],
  Array [
    "lineTo",
    0,
    2.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    7.5,
  ],
  Array [
    "lineTo",
    0,
    7.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    12.5,
  ],
  Array [
    "lineTo",
    0,
    12.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    17.5,
  ],
  Array [
    "lineTo",
    0,
    17.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    22.5,
  ],
  Array [
    "lineTo",
    0,
    22.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    27.5,
  ],
  Array [
    "lineTo",
    0,
    27.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    32.5,
  ],
  Array [
    "lineTo",
    0,
    32.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    2.5,
  ],
  Array [
    "lineTo",
    0,
    2.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    7.5,
  ],
  Array [
    "lineTo",
    0,
    7.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    12.5,
  ],
  Array [
    "lineTo",
    0,
    12.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "clearRect",
    0,
    0,
    400,
    35,
  ],
  Array [
    "set strokeStyle",
    "rgba(0, 127, 255, 0.3)",
  ],
  Array [
    "set lineCap",
    "round",
  ],
  Array [
    "set lineWidth",
    3.75,
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    0,
    2.5,
  ],
  Array [
    "lineTo",
    66.66666666666667,
    2.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    6.666666666666673,
    7.5,
  ],
  Array [
    "lineTo",
    73.33333333333331,
    7.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    13.333333333333346,
    12.5,
  ],
  Array [
    "lineTo",
    80.00000000000001,
    12.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    19.99999999999999,
    17.5,
  ],
  Array [
    "lineTo",
    86.66666666666666,
    17.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    26.666666666666664,
    22.5,
  ],
  Array [
    "lineTo",
    93.33333333333336,
    22.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    33.333333333333336,
    27.5,
  ],
  Array [
    "lineTo",
    100,
    27.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    40.00000000000001,
    32.5,
  ],
  Array [
    "lineTo",
    106.66666666666666,
    32.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    46.66666666666668,
    2.5,
  ],
  Array [
    "lineTo",
    113.33333333333336,
    2.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    53.33333333333333,
    7.5,
  ],
  Array [
    "lineTo",
    120,
    7.5,
  ],
  Array [
    "stroke",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "moveTo",
    60,
    12.5,
  ],
  Array [
    "lineTo",
    126.6666666666667,
    12.5,
  ],
  Array [
    "stroke",
  ],
]
`;

exports[`timeline/TrackNetwork matches the component snapshot 1`] = `
<div
  class="timelineTrackNetwork"
  style="height: 35px;"
>
  <div
    class="react-contextmenu-wrapper treeViewContextMenu"
  >
    <canvas
      class="timelineTrackNetworkCanvas"
      height="35"
      width="400"
    />
    <div
      class="timelineVerticalIndicatorsLine"
      data-marker-index="10"
      data-testid="vertical-indicator-line"
      style="--vertical-indicator-color: var(--red-60); left: 200px;"
    />
    <div
      class="timelineVerticalIndicatorsLine"
      data-marker-index="11"
      data-testid="vertical-indicator-line"
      style="--vertical-indicator-color: #000; left: 200px;"
    />
    <div
      class="timelineVerticalIndicatorsLine"
      data-marker-index="12"
      data-testid="vertical-indicator-line"
      style="--vertical-indicator-color: var(--blue-50); left: 266.6666666666667px;"
    />
    <div
      class="timelineVerticalIndicatorsLine"
      data-marker-index="13"
      data-testid="vertical-indicator-line"
      style="--vertical-indicator-color: var(--grey-40); left: 266.6666666666667px;"
    />
    <div
      class="timelineVerticalIndicatorsLine"
      data-marker-index="14"
      data-testid="vertical-indicator-line"
      style="--vertical-indicator-color: var(--magenta-60); left: 333.33333333333337px;"
    />
  </div>
</div>
`;
